Failures in preCacheMongosRoutingInfo() will cause mongos to fail startup

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0, v4.4, v4.2
    • Sharding EMEA 2022-02-21
    • 9
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If preCacheMongosRoutingInfo() fails, it will cause mongos to be unable to start. One observed case was during getShardedCollectionRoutingInfoWithRefresh(), a collection was missing chunks due to another issue and triggered an assertion.

      As preCacheMongosRoutingInfo() is an optimization, its failure should not prevent the cluster from starting up.

            Assignee:
            Antonio Fuschetto
            Reporter:
            Brett Nawrocki
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: