SERVER-62036 Failures in preCacheMongosRoutingInfo() will cause mongos to fail startup